--- a/docker/mkdocs/Dockerfile
+++ b/docker/mkdocs/Dockerfile
@@ -5,7 +5,9 @@ RUN apk add --no-cache \
 		'py3-pip=22.3.1-r1'
 
 # Install mkdocs
-RUN pip install mkdocs
+RUN pip install \
+		mkdocs \
+		mkdocs-material
 
 ENTRYPOINT [ "/usr/bin/mkdocs" ]
 CMD []
