--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,23 @@
 site_name: CLARIN ERIC Software Development Handbook
+repo_url: https://github.com/clarin-eric/handbook-development
+edit_uri: edit/main/docs/
 theme:
   name: material
+  language: en
+  features:
+    - navigation.footer
+    - content.action.view
+    - content.action.edit
+plugins:
+  - search
+extra:
+  social:
+    - icon: fontawesome/solid/globe
+      link: https://www.clarin.eu
+    - icon: fontawesome/brands/github
+      link: https://github.com/clarin-eric
+    - icon: fontawesome/brands/gitlab
+      link: https://gitlab.com/CLARIN-ERIC
+      
 nav:
-    - Home: index.md
+  - Home: index.md
