configure markdown extensions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,9 @@ theme:
     - content.action.edit
 plugins:
   - search
+markdown_extensions:
+  - footnotes
+  - tables
 extra:
   social:
     - icon: fontawesome/solid/globe
