setup.py install depreciated, install wheel before installing PyPi packages

--- a/docker/mkdocs/Dockerfile
+++ b/docker/mkdocs/Dockerfile
@@ -5,9 +5,11 @@ RUN apk add --no-cache \
 		'py3-pip=22.3.1-r1'
 
 # Install mkdocs
-RUN pip install \
+RUN pip install wheel && \
+	pip install \
 		mkdocs \
-		mkdocs-material
+		mkdocs-material \
+		wheel
 
 ENTRYPOINT [ "/usr/bin/mkdocs" ]
 CMD []
