--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,14 +10,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.0'
-          bundler-cache: true
-      - name: install MDL
-        run: gem install mdl -v 0.12.0
-      - name: Lint README
-        run: mdl README.md
-      - name: Lint docs
-        run: (cd docs && mdl .)
+      - name: Lint
+        run: bash lint.sh
