fixed recursive linting

--- a/docker/mdl/Dockerfile
+++ b/docker/mdl/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.19
-RUN apk add ruby
-RUN gem install mdl -v 0.12.0
+RUN apk add ruby git
+RUN gem install mdl -v 0.13.0
 ENTRYPOINT [ "mdl" ]
 CMD [ "" ]
