put some things in the right place + updated ToC

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,3 +49,6 @@ nav:
     - 'Docker': stack/docker.md
     - 'Python': stack/python.md
     - 'Javascript': stack/javascript.md
+  - 'Interoperability and portability':
+    - 'Authentication mechanisms': interoperability-and-portability/authentication-mechanisms.md
+    - 'Localisation and internationaliszation': interoperability-and-portability/localisation.md
