mkdocs docker image + start script

--- a/docker/mkdocs/Dockerfile
+++ b/docker/mkdocs/Dockerfile
@@ -1,14 +1,17 @@
-FROM registry.gitlab.com/clarin-eric/docker-alpine-base:2.3.3
-
-# Alpine package dependencies
-RUN apk add --no-cache \
-		'py3-pip=22.3.1-r1'
+FROM registry.gitlab.com/clarin-eric/docker-alpine-base:2.6.9
 
 # Install mkdocs
-RUN pip install wheel && \
-	pip install \
-		mkdocs \
-		mkdocs-material
+RUN apk add --no-cache 'py3-pip=23.3.1-r0' \
+	&& python3 -m venv /mkdocs \
+	&& . /mkdocs/bin/activate \
+	&& pip install wheel \
+	&& pip install mkdocs mkdocs-material
 
-ENTRYPOINT [ "/usr/bin/mkdocs" ]
+RUN echo -e \
+	"#!/usr/bin/env bash\n" \
+	"source /mkdocs/bin/activate && mkdocs \"\$@\"" \
+	> /usr/local/bin/entrypoint.sh \
+	&& chmod +x /usr/local/bin/entrypoint.sh
+
+ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
 CMD []
