Set lint as dependency for PR and master workflows

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -1,6 +1,10 @@
 name: Test build site
 on:
   pull_request:
+  workflow_run:
+    workflows: ["lint"]
+    types: 
+      - completed
 
 jobs:
   test:
