--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,10 +5,14 @@ on:
       - main
   workflow_run:
     workflows: ["lint"]
+    branches: [main]
+    types: 
+      - completed
 
 jobs:
   build:
     name: Deploy docs
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout main
