--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,10 +4,10 @@ on:
     branches:
       - main
   workflow_run:
-    workflows: ["lint"]
+    workflows: [lint]
     branches: [main]
     types: 
-      - completed
+      - [completed]
 
 jobs:
   build:
