--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   workflow_run:
-    workflows: [lint]
+    workflows: ["lint"]
     branches: [main]
     types: 
       - [completed]
