Set workflow types as in-line array

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -3,8 +3,7 @@ on:
   pull_request:
   workflow_run:
     workflows: [lint]
-    types: 
-      - completed
+    types: [completed]
 
 jobs:
   test:
