--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,7 @@ on:
   workflow_run:
     workflows: [lint]
     branches: [main]
-    types: 
-      - completed
+    types: [completed]
 
 jobs:
   build:
